<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editLogin"
        android:hint="@string/loginhint"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editSenha"
        android:hint="@string/senhahint"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="onClickLogin"
        android:text="@string/btnLogarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="onClickCadastrar"
        android:text="@string/btnCadastrarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>