<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroActivity">

    <EditText
        android:id="@+id/editLoginCad"
        android:hint="@string/loginhint"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editSenhaCad"
        android:hint="@string/senhahint"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editSenhaConfirm"
        android:hint="@string/senhaConfirmHint"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="onClickCadastro"
        android:text="@string/btnCadastrarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>